Revision history for Perl extension DBIx::XHTML_Table.

1.48

1.47
    - update copyright date
    - fix bug tracker location

1.46
    - added github meta to makefile
    - reformatted source code to use spaces for indentation
        instead of tabs -- all repo changes prior to 1.37 are gone anyway

1.45
    - readdressed bug #21761, client must now set 'encode_cells' to true

1.44
    - fixed distro tests

1.43
    - fixed distro manifest

1.42
    - fixed bug #6962 (Support for mixed case field names returned by the SQL query)
    - added DBD::CSV and HTML::TableExtract tests (will only run if mods are installed)

1.41
    - fixed critical bug #104484 (Makefile.PL or Build.PL) :(

1.40
    - restructed tests
    - corrected external sites in docs

1.39
    - corrected MANIFEST
    - added DBI as makefile dependency 

1.38
    - using .md for readme
    - fixed bug #104380 (cpan / cpanm install hangs)
    - fixed bug #21761 (Special XML characters should be expressed as entities)
    - fixed bug #11681 (Possible problem with modify() on column number 0)
    - fixed bug #11666 (cell data containing newlines does not render)

1.37
    - using Module::Starter and Module::Build
    - added to github 

1.36
	- doc updates

1.34
	- constructer now checks for DBI::db subclasses
	- exec_query() now accepts DBI::st subclasses

1.32
	- forced lc end tag
	- more minor doc changes

1.30
	- minor doc changes

1.28
	- finally 'blessed' add_cols and drop_calls
	  (no longer undocumented)

1.26
	- changed the blessed ref regex to simply /DBI/
	  (forgot about Apache::DBI ... doh!)

1.24
	- finally realized that w3c requires tfoot to come before
	  tbody ... fixed
	- added DBIx::Password compatibility, any blessed ref
	  passed to constructor that matches /^DBIx?::/ will work

1.22
	- well, extremely's patch turned 0's into &nbsp; - fixed
	  (you rule anyway Mark!)
	- also, now escaping ampersands in _build_body_row
	  (this prolly should be a user option ...)

1.20